chore: restructure project for public release and CI/CD
- Add GitHub Actions CI workflow for Python 3.10-3.12 testing
- Add MIT LICENSE and CONTRIBUTING.md with setup and development guidelines
- Refactor audit modules into separate files (audit_core.py, audit_parser.py, audit_csv.py, audit_server.py, audit_types.py, audit_utils.py, audit_constants.py, audit_summary_report.py, audit_optimization_report.py)
- Create main.py as entry point and consolidate CLI logic
- Add requirements-dev.txt for development dependencies
- Remove design-system directory and frontend-SKILL.md (local-only assets)
- Remove model_audit_local_app.py (replaced by modular structure)
- Update .gitignore to exclude runtime artifacts (data/, model_audit_*.json) and local development files
- Simplify README.md with public repo notes about ignored outputs and cleaner quick-start instructions
- Rename test_audit_app.py to reflect new module structure
- Update run_model_audit_dashboard.sh to work with new entry point

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+
 .DS_Store
-*.csv
+.idea/
+.vscode/
+
+.venv/
+venv/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+
+.coverage
+htmlcov/
+dist/
+build/
+*.egg-info/
+
+# Runtime-generated app outputs (can include local paths/thread metadata)
+data/
+model_audit_audit.json
+model_audit_summary.json
+model_audit_opportunities.json
+
+# Local-only docs/assets not for public repo
+design-system/
+frontend-SKILL.md
