--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,11 @@ build/
 *.egg-info/
 
 # Runtime-generated app outputs (can include local paths/thread metadata)
-data/
-model_audit_audit.json
-model_audit_summary.json
-model_audit_opportunities.json
+reports/data/
+reports/model_audit_audit.json
+reports/model_audit_summary.json
+reports/model_audit_opportunities.json
 
 # Local-only docs/assets not for public repo
 design-system/
-frontend-SKILL.md
+docs/internal/frontend-SKILL.md
